--- a/docs/graduate-program/1_1_Start/2022_homework/温之儀/1_1_homework.Rmd
+++ b/docs/graduate-program/1_1_Start/2022_homework/温之儀/1_1_homework.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "1.1 Start to Learn Programming and R"
-author: "Student's name"   ## 更換為學生姓名
-date: "2022//"            ## 輸入完成作業日期
+author: "温之儀"   ## 更換為學生姓名
+date: "2022/02/25"            ## 輸入完成作業日期
 output: html_document
 ---
 
@@ -18,10 +18,10 @@ knitr::opts_chunk$set(
 透過簡單的自我介紹，認識R chunk與R物件。
 
 ```{r aboutme}
-name <- ""  ##輸入個人姓名
-age <-      ##輸入目前年齡
+name <- "温之儀"  ##輸入個人姓名
+age <- 23     ##輸入目前年齡
 today <- Sys.Date()  ## 不必更動
-next_birthday <- as.Date("")  ##輸入下一次生日日期
+next_birthday <- as.Date("2022/5/22")  ##輸入下一次生日日期
 ```
 
 按下'Knit'，檢視網頁裡下一行顯示成果。
@@ -35,20 +35,24 @@ next_birthday <- as.Date("")  ##輸入下一次生日日期
 在下一個chunk `mybest` 建立物件，表達你想介紹的家人或好友資訊，在chunk之後以inline code輸出有這些資訊的句子。
 
 ```{r mybest}
+name <- "石鑫峰"  
+age <- 23     
+today <- Sys.Date()  ## 不必更動
+next_birthday <- as.Date("2022/11/27") 
 
 ```
+他是`r name`，今年`r age`歲。今天離他的下一次生日還有 `r next_birthday - today`天。
 
-
-## 安裝及匯入套件
+## 安裝及套件
 
 檢查個人的Rstudio有安裝`tidyverse`套件。在下方兩個標記符號之間，寫出安裝及匯入`tidyverse`的程式碼。
 
 
 ``` ## 下一行寫出程式碼，勿更動這一行
-
+ "install.packages("tidyverse")" 
 
 ``` ## 上一行寫完程式碼，勿更動這一行
-
+"library('tidyverse')"
 
 > (在此說明在第一個chunk `setup`執行匯入套件有什麼效果)
 
@@ -58,16 +62,21 @@ next_birthday <- as.Date("")  ##輸入下一次生日日期
 在下一個chunk `iris`寫出查詢Iris Data的說明文件，顯示物件型態，以及預覽資料內容的三行程式碼。
 
 ```{r iris}
-?(iris)
+data(iris)
 class(iris)
 str(iris)
-head(iris)
 ```
 
 設定你製發一份調查聚餐意願的問卷，項目有聚餐日期(自行設定有那幾天)，聚餐時間(午餐、晚餐)，聚餐地點(自行設定有那些地點)以及餐點選項(自行設定有什麼選擇)。在下一個chunk `survey` 建立一個資料框架(data.frame)包含至少三位回覆者的回應。
 
 ```{r survey}
-
+ date <- c("02-26", "02-27", "02-28")
+ time <- c("早午餐", "下午茶","晚餐")
+ locate <- c("神保町","爭鮮","米拉瓦")
+ meal <- c("燒烤","生鮭魚片","奶油蛤犡義大利麵")
+ data <- data.frame(date, time, locate, meal)
+ View(data) 
+```
 ```
 
 
