update Lecture01 Homework Rmd: add how to post your work on github discussion

--- a/docs/Lecture01HW.Rmd
+++ b/docs/Lecture01HW.Rmd
@@ -20,7 +20,7 @@ if(!require(effectsize)){install.packages("effectisize");library(effectsize)}els
 經過[第一堂課程](Lecture01.html)，為了各位學員之後在各種場域教授與討論效果量的計算與解讀，提供示範用的R程式碼及說明範例是相當有用的。我們將彙整Ben-Shachar等人(2020)開發的[R套件`effect size`](https://easystats.github.io/effectsize/index.html)，與Ellis(2010)Chapter 1,2的內容，以接力協作的方式編輯這份作業。每位學員貢獻一點成果，換取更多人在研究教學上的便利。
 
 
-> 編輯流程：<br>1. 使用純文字與[Latex編碼](http://tug.ctan.org/info/latex-refsheet/LaTeX_RefSheet.pdf)編輯效果量公式及範例說明;<br> 2. 在R chunk內放置可執行的R程式碼;<br> 3. 隨時按'Knit'渲染可得編輯成果;<br> 4. 編輯完成在[討論區](https://github.com/Rstat-project/seed_courses/discussions)留言提交Rmd編輯成果。
+> 編輯流程：<br>1. 混合純文字及[Latex編碼](http://tug.ctan.org/info/latex-refsheet/LaTeX_RefSheet.pdf)編輯效果量公式;<br> 2. 在R chunk內放置可執行的R程式碼;<br> 3. 隨時按'Knit'渲染可得編輯成果;<br> 4. 編輯完成在[討論區](https://github.com/Rstat-project/seed_courses/discussions)留言提交編輯成果。
 
 
 ## 計算效果量
@@ -35,18 +35,23 @@ if(!require(effectsize)){install.packages("effectisize");library(effectsize)}els
 
 - The odds ratio
 
+
 #### Groups compared on continuous outcomes
 
 - Cohen’s d
 
 比較獨立樣本平均數的效果量Cohen's d計算公式
+
 $$Cohen's \space d = \frac{M_1 - M_2}{SD_{pooled}} $$
 
 ```{r echo=TRUE}
 ## 獨立樣本比較範例
+## 範例資料來自`mtcars`
 cohens_d(mpg ~ am, data=mtcars)
 ## 輸出效果量及95%信賴區間
 ```
+
+
 
 
 - Glass’s delta( $\triangle$ )
