--- a/docs/Lecture01HW.Rmd
+++ b/docs/Lecture01HW.Rmd
@@ -130,3 +130,5 @@ cohens_d(mpg ~ am, data=mtcars)
 #### 參考資源
 
 Ben-Shachar, M. S., Lüdecke, D., & Makowski, D. (2020). effectsize: Estimation of effect size indices and standardized parameters. Journal of Open Source Software, 5(56), 2815. https://doi.org/10.21105/joss.02815
+
+Ellis, P. D. (2010). The essential guide to effect sizes: Statistical power, meta-analysis, and the interpretation of research results. Cambridge University Press.
