complete Lecture02 HW

--- a/docs/files/Lecture02HW.Rmd
+++ b/docs/files/Lecture02HW.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "Lecture02_HW.Rmd"
 author: "my name"
-date: "2022/5/4"
+date: "`r Sys.Date()`"
+bibliography: examples.bib
 output: html_document
 ---
 
@@ -21,7 +22,7 @@ if(!require(pwr)){install.packages("pwr")}
 ## 講義筆記
 
 在此可自行增加及編輯文字與R chunk，演練講義題目。
-
+如果要輸出完整報告，建議下載[參考文獻bib](files/examples.bib)。
 
 
 ## pwr實作演練
@@ -114,4 +115,7 @@ $$d = \frac{2t}{sqrt(df)}$$
 
 ### Task 9: Power of Published Research
 
-<!--- asking the source code from 熊恩筠等人(2022) --->
+@xiongenyunBiJiaoZiBiZhengChengRenYuYiBanChengRenDeLianKongHeWuTiQuBianNengLiYiBianXingDianFanTanTao2022 邀請24位自閉症成年人士及24位心智正常人士，進行變形臉孔區辨作業與變形物體區辨作業，比較自閉症族群與正常人士辨識臉孔與物體正確率達75%的最低變形程度閾值。變形臉孔區辨作業操作臉孔變形程度(15%,30%,45%,60%,75%)，變形物體區辨作業操作臉孔變形程度(12%,24%,36%,48%,60%)，研究者紀錄參與者能正確辨識目標臉孔的次數。研究結果顯示只有變形臉孔區辨作業的部分條件 出現組間差異，若要重製或延伸這項研究，我們能如何評估效果量及事後考驗力？
+
+感謝簡惠玲老師提供[原始研究資料](files/curve fitting data.xlsx)。重製分析請見[示範說明](https://rstat-project.github.io/seed_courses/files/example.html)。
+
