--- a/docs/Lecture03.Rmd
+++ b/docs/Lecture03.Rmd
@@ -74,7 +74,7 @@ library(tidyverse)
 
 ## 2010年之後
 
-<p style="font-size:60%;">[Schäfer and Schwarz (2019)](https://www.frontiersin.org/articles/10.3389/fpsyg.2019.00813/full) 陳列各領域研究報告顯著結果次數，旁註效果量低中高標。<br/>**無預先註冊的心理學研究有高估效果量的傾向。**</p>
+<p style="font-size:60%;">[Schäfer and Schwarz (2019)](https://www.frontiersin.org/articles/10.3389/fpsyg.2019.00813/full) 彙整2017~2018各心理科學領域研究報告效果量。<br/>效果量依研報告次數佔比分級，**無預先註冊的心理學研究傾向高估效果量。**</p>
 
 ![](images/fpsyg-10-00813-g001.jpg)
 
@@ -112,7 +112,7 @@ library(tidyverse)
 --->
 
 
-```{r echo=FALSE}
+```{r echo=FALSE, fig.height=300}
 knitr::include_graphics("images/13421_2020_1078_Tab1_HTML.png")
 ```
 
@@ -139,7 +139,7 @@ round(unlist(effectsize::cohens_d(RT ~ Picture, data = subset(orig_results_wide,
 round(unlist(effectsize::cohens_d(RT ~ Picture, data = subset(orig_results_wide, Experiment == "3" & Sentence == "Color"), paired = TRUE))[c(1)],2),
 round(unlist(effectsize::cohens_d(RT ~ Picture, data = subset(orig_results_wide, Experiment == "3" & Sentence == "Blank"), paired = TRUE))[c(1)],2))
 
-orig_sum = data.frame(orig_sum, Cohen_d)
+orig_sum = cbind(orig_sum, Cohen_d)
 ```
 
 `r knitr::kable(orig_sum)`
@@ -148,7 +148,7 @@ orig_sum = data.frame(orig_sum, Cohen_d)
 ## 案例一重製成本評估
 
 
-```{r effect_size, echo=FALSE, fig.height=5}
+```{r effect_size, echo=FALSE}
 
 ## effect size from study 1 to 3 of Hoeben Mannaert et al. (2021)
 d_t <- c(.12,.35,.46)
@@ -181,7 +181,7 @@ ggplot(data=tb,aes(x=N,y=Power,color=ES))+
 
 ## 案例一原始研究公開資料
 
-- 預先註冊計畫與實驗材料：[Exp 1 & 2](https://osf.io/2nup7), [Exp 3](https://osf.io/bfm6p)
+- 預先註冊計畫與實驗材料：[Exp 1 & 2](https://osf.io/f3tu2/), [Exp 3](https://osf.io/bfm6p)
 
 - [全部實驗平均反應值資料](https://osf.io/emgya)
 
@@ -190,9 +190,6 @@ ggplot(data=tb,aes(x=N,y=Power,color=ES))+
 - 有各實驗預先註冊計畫
 - 有實驗刺激句、圖像檔案列表
 - 公開資料有參與者各條件平均反應時間及正確率
-
-> 
-
 - 公開資料無參與者各試驗反應資料
 - 公開資料無資料編碼薄
 
@@ -223,14 +220,10 @@ ggplot(data=tb,aes(x=N,y=Power,color=ES))+
 
 ##
 
->- <p style="font-size:50%;">相對於學術摘要的考驗力曲線</p>
-
 |真實感|![](images/H4_power.png)|
 |:---:|:---:|
 
 ## 
-
->- <p style="font-size:50%;">相對於學術摘要的考驗力曲線</p>
 
 |專業感|![](images/H5_power.png)|
 |:---:|:---:|
@@ -244,18 +237,14 @@ ggplot(data=tb,aes(x=N,y=Power,color=ES))+
 
 - [原始反應資料](https://osf.io/b34fj)
 - [原始反應資料編碼薄](https://osf.io/q4chk)
-- [原始研究R程式碼](https://osf.io/qf6cr)
 
 ## 評論案例二資料公開程度
 
 - 有各實驗預先註冊計畫
 - 實驗刺激來自公開資訊(原始論文)
-
->
-
 - 公開資料有參與者各試驗反應資料
 - 公開資料有資料編碼薄
-- 公開資料有R程式碼
+
 
 ## 預估重製研究效果量的合適模式Part 3
 
@@ -267,11 +256,11 @@ ggplot(data=tb,aes(x=N,y=Power,color=ES))+
 
 # 透明化操作示範
 
-[Datawiz](https://datawiz2.dev.zpid.de/)是由The Leibniz Institute for Psychology (ZPID)開發的一項專案，協助心理科學研究者整理研究資料文件能符合[FAIR科學資料公正使用原則](https://www.go-fair.org/fair-principles/)。
+[Datawiz](https://datawiz2.dev.zpid.de/)是由The Leibniz Institute for Psychology (ZPID)開發的一項專案，協助心理科學研究者整理研究資料能符合[FAIR科學資料管理原則](https://www.go-fair.org/fair-principles/)。
 
 - 專案人員的[工作坊講義](https://psycharchives.org/en/item/066dfbfd-4a49-4069-a257-7eeb919c9f4e)。
 
-## 註冊Datawiz
+## 註冊
 
 - 點選[Datawiz首頁](https://datawiz2.dev.zpid.de/)右上角*[Login]*
 - 點選**Register here!**，註冊"Leibniz Psychology account"
@@ -284,9 +273,9 @@ ggplot(data=tb,aes(x=N,y=Power,color=ES))+
 ## 示範步驟
 
 >- 請參考示範直播。
->- Resource description: [貢獻者角色分類譜](https://credit.niso.org/), [FAIR科學研究資料公正使用原則 ](https://www.go-fair.org/fair-principles/)。
+>- Resource description: [貢獻者角色分類譜](https://credit.niso.org/), [科學研究資料公正使用原則 FAIR](https://www.go-fair.org/fair-principles/)。
 
 
 # 回家作業
 
-使用最近進行或剛完成的研究資料，整理可重製資料文件。
+使用最近進行或剛完成的研究資料，整理可重製的資料。
